# clean-turkish-skills

./: .gitignore  LICENSE  README.md  SKILL.md  clean-turkish.skill  plugin.json  pyproject.toml
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: hata-bildirimi.md  kural-onerisi.md
.github/workflows/: ci.yml  release.yml
clean_turkish/: cli.py  core.py  scanner.py
guidelines/: examples.md  expressions.md  structures.md
tests/: test_cli.py  test_scanner.py
