[project]
name = "clean-turkish"
version = "1.1.0"
description = "Türkçe metinlerden yapay zeka yazım kalıplarını temizleyen skill ve CLI aracı"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "0nur0duncu" }
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
clean-tr = "clean_turkish.cli:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
